v1.0.16
# Improvement: Added new filter `astra_render_fonts` to add the support for custom fonts.
# Improvement: Added new action `astra_customizer_font_list` to add the custom fonts list into customizer.

v1.0.15
# New: Font family, font weight and text transform options implemented for Headings.
# New: Footer Bar Color options Implemented.
# New: Footer Widgets Color options Implemented.
# Improvement: Added new filter `astra_the_post_id` to Enable or Disable title of archive posts.
# Fixed: System fonts should not call for googleapi.
# Fixed: Featured images not showing up on Page after v1.0.14
# Fixed: Notice - Getting property of Non-object variable with activated Visual Composer.

v1.0.14
# Improvement: Added new filter `astra_blog_post_meta_enabled` to Enable or Disable meta on archive pages.
# Improvement: Added new filter `astra_single_post_meta_enabled` to Enable or Disable meta on single post.
# Fixed: Regression in v1.0.14 which caused page titles to be displayed on some of the pages.

v1.0.13
# New: When using page builders Beaver Builder or Elementor on a new page - Page layout will be changed to "Full width / Stretched" and for Visual Composer the page layout will be changed to "Full width / Contained" Also the title bar will be disabled hence reducing the number of clicks needed to get full-width pages.
# Improvement: Added new filter `astra_post_link_enabled` to Enable or Disable read more links on archive pages.
# Improvement: Renamed the layout option `Plain` with `Full Width / Contained`
# Improvement: Renamed the layout option `Page Builder` with `Full Width / Streched`
# Fixed: Extra space at above with `Full Width / Streched` Layout on page.
# Fixed: Updated the TinyMCE editor's width to be 100%

v1.0.12
# New: 'Footer Widgets' added in customizer.
# Improvement: 'astra_pagination_enabled' filter added for Enable or Disable blog/archive pagination.