@@ -34,10 +34,6 @@
   padding: 0.75em;
 }
 
-.wpcf7 textarea {
-  height: 135px;
-}
-
 .wpcf7 input[type="file"] {
   color: #666;
   height: auto;
