@@ -33,10 +33,6 @@
 		width: 100%;
 	    padding: 0.75em;
 	}
-   
-    textarea {
-    	height: 135px;
-    }
 
     input[type="file"] {
 		color: $color-text-input;
